# minecraft-discord-auth

./: Cargo.toml  Dockerfile  ENV-VARIABLES  docker-compose.yaml
.github/workflows/: docker-publish.yml
database/: setup.sql  tables.sql  triggers.sql  views.sql
src/: main.rs
src/bot/: authentication.rs  bot.rs  command.rs  mod.rs
src/bot/commands/: mod.rs  pong.rs  register.rs  unregister.rs
src/services/: config.rs  database.rs  embed.rs  mod.rs  queue.rs
