[package]
name = "minecraft-discord-auth"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", features = ["model"] }
async-trait = "0.1.64"
dotenvy = "0.15"
tokio-postgres = "0.7.7"
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
config = "0.13.3"
anyhow = "1.0.69"
thiserror = "1.0.38"
rand = "0.8.5"
bb8-postgres = "0.8.1"
bb8 = "0.8.0"
futures = "0.3.26"
async-std = "1.12.0"
